--- a/app/templates/product-detail.html
+++ b/app/templates/product-detail.html
@@ -10,7 +10,7 @@
     </div>
 </div>
 <section id="content-area" class="content-blog product-detail">
-    <h1 class="text-center detail-title">{{Product.detail.title}}</h1>
+    <h1 class="text-center detail-title">{{Product.detail.name}}</h1>
     <div class="row text-center">
         <div class="col-md-6 col-md-offset-3">
             <!-- slider -->
