--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -1429,7 +1429,7 @@ footer
   background-color #fff
   background-image none
   border 1px solid #eaeaea
-  border-radius 0px
+  border-radius 0
   -webkit-box-shadow inset 0 1px 1px rgba(0, 0, 0, 0)
   box-shadow inset 0 1px 1px rgba(0, 0, 0, 0)
   -webkit-transition border-color ease-in-out .15s
@@ -1472,7 +1472,7 @@ footer
 
   &:focus
     padding 8px 5px
-    border 1px solid #888
+    border 1px solid #888 !important
     outline 0
     -webkit-box-shadow 0 0 0 9px rgba(0, 0, 0, 0)
     box-shadow 0 0 0 9px rgba(0, 0, 0, 0)
