--- a/app/css/main.css
+++ b/app/css/main.css
@@ -242,28 +242,6 @@ header {
   background-color: transparent;
   color: #aa261d;
 }
-.header .navbar-default .navbar-nav .dropdown:hover .dropdown-toggle {
-  background-color: #333;
-  color: #fff;
-}
-.header .navbar-default .navbar-nav .dropdown .dropdown-menu {
-  width: 100%;
-  background-color: #333;
-  border: none;
-  -webkit-box-shadow: 0px 5px 5px rgba(0,0,0,0.33);
-  -moz-box-shadow: 0px 5px 5px rgba(0,0,0,0.33);
-  box-shadow: 0px 5px 5px rgba(0,0,0,0.33);
-}
-.header .navbar-default .navbar-nav .dropdown .dropdown-menu > li > a {
-  color: #fff;
-  font-weight: 300;
-  font-size: 16px;
-  padding: 10px 15px;
-}
-.header .navbar-default .navbar-nav .dropdown .dropdown-menu > li > a:hover {
-  background: rgba(0,0,0,0.3);
-  color: #fff;
-}
 .header .navbar-default .container-fluid {
   display: table;
   margin: 0 auto;
@@ -1697,7 +1675,7 @@ footer .contact-sty .download-app > i:hover {
   background-color: #fff;
   background-image: none;
   border: 1px solid #eaeaea;
-  border-radius: 0px;
+  border-radius: 0;
   -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0);
   box-shadow: inset 0 1px 1px rgba(0,0,0,0);
   -webkit-transition: border-color ease-in-out 0.15s;
@@ -1740,7 +1718,7 @@ footer .contact-sty .download-app > i:hover {
 }
 .form-control-select:focus {
   padding: 8px 5px;
-  border: 1px solid #888;
+  border: 1px solid #888 !important;
   outline: 0;
   -webkit-box-shadow: 0 0 0 9px rgba(0,0,0,0);
   box-shadow: 0 0 0 9px rgba(0,0,0,0);
