--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -7,7 +7,7 @@
                         <h2 class="title text-center">Iniciar sesión</h2>
                     </div>
                     <div class="col-md-10">
-                        <form class="padding form-horizontal">
+                        <form class="padding"  novalidate>
                             <div class="form-group">
                                 <input type="text" class="form-control" id="email" name="email"
                                        placeholder="Usuario/Correo" required>
@@ -18,7 +18,7 @@
                             </div>
                             <p class="text-center forgot-pass"><a href="">¿Olvidaste la contaseña?</a></p>
 
-                            <div class="text-center" style="padding-top: 58px;">
+                            <div class="text-center" style="padding-top: 40px;">
                                 <button type="submit" class="btn btn-block btn-login-ca" ng-disabled="Contact.busy">
                                      Iniciar sesión <span ng-if="Contact.busy"><i
                                         class="fa fa-spinner fa-spin"></i></span>
@@ -33,22 +33,38 @@
                     </div>
 
                     <div class="col-md-offset-2 col-md-10">
-                        <form class="padding form-horizontal">
-                            <div class="form-group">
-                                <input type="text" class="form-control" id="fullname" name="fullname"
-                                       placeholder="Nombre completo" required>
+                        <form class="padding" name="registerForm" ng-submit="Register.createAccount()" novalidate>
+                            <div class="form-group" ng-class="{ 'has-error': registerForm.username.$touched && registerForm.username.$invalid }">
+                                <input type="text" ng-model="Register.formData.username" class="form-control" id="username" name="username"
+                                       placeholder="Usuario" required>
+                                <div ng-messages="registerForm.username.$error" ng-if="registerForm.username.$invalid">
+                                    <div ng-message="required">El campo es requerido</div>
+                                </div>
                             </div>
-                            <div class="form-group">
-                                <input type="email" class="form-control" id="emailr" name="emailr"
+                            <div class="form-group" ng-class="{ 'has-error': registerForm.emailr.$touched && registerForm.emailr.$invalid }">
+                                <input type="email" ng-model="Register.formData.email" class="form-control" id="emailr" name="emailr"
                                        placeholder="Correo electrónico" required>
                             </div>
-                            <div class="form-group">
-                                <input type="password" class="form-control" id="passwordr" name="passwordr"
-                                       placeholder="Contraseña" required>
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <div class="form-group" ng-class="{ 'has-error': registerForm.passwordr.$touched && registerForm.passwordr.$invalid }">
+                                        <input type="password" ng-model="Register.formData.password" class="form-control" id="passwordr" name="passwordr"
+                                               placeholder="Contraseña" required="Register.formData.password2">
+                                    </div>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="form-group" ng-class="{ 'has-error': registerForm.password2.$touched && registerForm.password2.$invalid }">
+                                        <input type="password" ng-model="Register.formData.password2" class="form-control" id="password2" name="password2"
+                                               placeholder="Confirmar contraseña"
+                                               compare-to="Register.formData.password" ng-required="Register.formData.password">
+                                    </div>
+                                </div>
                             </div>
 
+
                             <div class="text-center" style="padding-top: 15px;">
-                                <button type="submit" class="btn btn-block btn-login-ca" ng-disabled="Contact.busy">
+                                <button type="submit" class="btn btn-block btn-login-ca"
+                                        ng-disabled="registerForm.$invalid">
                                     Regístrarme <span ng-if="Contact.busy"><i
                                         class="fa fa-spinner fa-spin"></i></span>
                                 </button>
