--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -458,6 +458,23 @@ header
   padding 20px 0
   color orange
 /************** Home area css ******************/
+.data-contact
+  a
+    color #555
+  a > i
+    font-size 14px
+  .person
+    font-size 2.8em
+  .my-account
+    position absolute
+    padding-top 20px
+    padding-right 5px
+  .my-logout
+    position absolute
+    padding-top 10px
+  .logout-ac
+    font-size 1.5em
+    padding-left 5px
 .detail-img
   height 300px
   background-size contain
@@ -893,12 +910,6 @@ header
     background-size 180px
     background-repeat no-repeat
     background-position right
-.data-contact
-  padding 10px 0
-  a
-    color #555
-  a > i
-    font-size 14px
 .box-simple
   margin 25px
   .box-header
