--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -10,7 +10,7 @@
                         <form class="padding" name="loginForm" novalidate ng-submit="Access.login()">
                             <div class="form-group" ng-class="{ 'has-error': loginForm.username.$touched && loginForm.username.$invalid }">
                                 <input type="text" ng-model="Access.formDataLogin.username" class="form-control" id="user" name="username"
-                                       placeholder="Nombre de Usuario" required>
+                                       placeholder="Nombre de usuario" required>
                                 <div class="help-block" ng-messages="loginForm.username.$error" ng-if="loginForm.username.$touched">
                                     <div ng-message="required">Ingrese el nombre de usuario</div>
                                 </div>
