--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -465,6 +465,9 @@ header
     font-size 14px
   .person
     font-size 2.8em
+    &:hover
+      color cagreenh
+      font-weight 800
   .my-account
     position absolute
     padding-top 20px
@@ -977,7 +980,8 @@ header
     .img-box
       opacity 1
 
-
+.save-info
+  padding 25px 15px
 .widgets
   margin-top 0px
 .box-sidebar
@@ -1108,6 +1112,68 @@ header
 .img-size
   a>img
     width 100%
+
+/* dashboard area*/
+.menu
+  padding 5px
+  position relative
+  .menu-item
+    border-radius 5px
+    width 100%
+    height 200px
+    overflow hidden
+    float left
+    position relative
+    cursor pointer
+    img
+      width 100%
+      height auto
+      position absolute
+      top 0
+      left 0
+      -webkit-transition -webkit-transform 1s linear
+      transition -webkit-transform 1s linear
+    .mask
+      width 100%
+      height 100%
+      opacity 0.8
+      position absolute
+      top 0
+      left  0
+      background rgba(0, 0, 0, 0.48)
+    .heading
+      position relative
+      text-align center
+      top 50%
+      -webkit-transform translateY(-50%)
+      -ms-transform translateY(-50%)
+      transform translateY(-50%)
+      i
+        background transparent
+        border-radius 50%
+        border 1px solid #ffffff
+        color #ffffff
+        display block
+        font-size 2.2em
+        height 60px
+        line-height 60px
+        margin auto auto 10px
+        text-align center
+        width 60px
+        -webkir-transition all 0.3s
+        -webkit-transition all 0.3s
+        transition all 0.3s
+      h2
+        color #fff
+        font-size 25px
+        text-align center
+        margin 0
+        letter-spacing 1px
+        font-weight 500
+      h5
+        font-size 16px
+        color #fff
+
 
 /************** footer area css ******************/
 footer
