--- a/app/css/main.css
+++ b/app/css/main.css
@@ -530,6 +530,10 @@ header {
 .data-contact .person {
   font-size: 2.8em;
 }
+.data-contact .person:hover {
+  color: #7e1a1d;
+  font-weight: 800;
+}
 .data-contact .my-account {
   position: absolute;
   padding-top: 20px;
@@ -1147,6 +1151,9 @@ color
 .box-default:focus .img-box {
   opacity: 1;
 }
+.save-info {
+  padding: 25px 15px;
+}
 .widgets {
   margin-top: 0px;
 }
@@ -1309,6 +1316,73 @@ color
 }
 .img-size a>img {
   width: 100%;
+}
+.menu {
+  padding: 5px;
+  position: relative;
+}
+.menu .menu-item {
+  border-radius: 5px;
+  width: 100%;
+  height: 200px;
+  overflow: hidden;
+  float: left;
+  position: relative;
+  cursor: pointer;
+}
+.menu .menu-item img {
+  width: 100%;
+  height: auto;
+  position: absolute;
+  top: 0;
+  left: 0;
+  -webkit-transition: -webkit-transform 1s linear;
+  transition: -webkit-transform 1s linear;
+}
+.menu .menu-item .mask {
+  width: 100%;
+  height: 100%;
+  opacity: 0.8;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: rgba(0,0,0,0.48);
+}
+.menu .menu-item .heading {
+  position: relative;
+  text-align: center;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+.menu .menu-item .heading i {
+  background: transparent;
+  border-radius: 50%;
+  border: 1px solid #fff;
+  color: #fff;
+  display: block;
+  font-size: 2.2em;
+  height: 60px;
+  line-height: 60px;
+  margin: auto auto 10px;
+  text-align: center;
+  width: 60px;
+  -webkir-transition: all 0.3s;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+.menu .menu-item .heading h2 {
+  color: #fff;
+  font-size: 25px;
+  text-align: center;
+  margin: 0;
+  letter-spacing: 1px;
+  font-weight: 500;
+}
+.menu .menu-item .heading h5 {
+  font-size: 16px;
+  color: #fff;
 }
 footer {
   background-color: #323232;
