fix register process and created dashboard profile

--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -1114,6 +1114,18 @@ header
     width 100%
 
 /* dashboard area*/
+.title-section
+  padding 10px 0 15px 0
+  position relative
+  z-index 1
+  .title
+    background #fafbfb
+    font-size 22px
+    padding 0 10px
+    z-index 7
+  .line-divider
+    position relative
+    color red
 .menu
   padding 5px
   position relative
@@ -1173,7 +1185,12 @@ header
       h5
         font-size 16px
         color #fff
-
+.alert-payment
+  color #f5f5f5
+  background-color #565656
+.alert-pdanger
+  color #f5f5f5
+  background-color cagreen
 
 /************** footer area css ******************/
 footer
