--- a/app/templates/auth/dashboard.html
+++ b/app/templates/auth/dashboard.html
@@ -1,92 +1,73 @@
 <!--content-->
 <div id="content-area" class="page_content">
-    <div class="clearfix">
-        <section class="container">
-            <article class="m_bottom_15">
-                <div class="clearfix m_bottom_15">
-                    <div class="title-section">
-                        <span class="title">Mi cuenta</span>
-
-                        <div class="line-divider"></div>
+    <section class="container">
+        <div class="row">
+            <div class="title-section">
+                <h2 class="title">Mi cuenta: usuario</h2>
+                <hr>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-3 menu">
+                <div data-url_target="about_us" class="profile-btn menu_button menu-item">
+                    <img alt="" src="../../img/about.jpg">
+                    <div class="mask">
                     </div>
-
-                    <br>
-                    <div class="user-area">
-                        <h4 style="clear:both">Bienvenido(a) a tú cuenta <strong
-                                class="orange">Jassael Fredy Ruiz</strong>
-                        </h4>
-                        <br/>
-                        <h4>En ésta sección puedes gestionar toda tú información personal y ordenes de
-                            compra.
-                            Las actividades que puedes realizar son las siguientes: Tu historial de compras,
-                            Visualizar direcciones de envío, Agregar nuevas direcciones de envío.
-                            Visualizar y editar tu información personal.</h4>
-                    </div>
-                    <hr>
-                    <div class="row">
-                        <div class="col-md-3 menu">
-                            <div data-url_target="about_us" class="profile-btn menu_button menu-item">
-                                <img alt="" src="../../img/about.jpg">
-                                <div class="mask">
-                                </div>
-                                <div class="heading">
-                                    <i class="ion-bag hidden-xs"></i>
-                                    <h2>Historial</h2>
-                                    <h5>de compras</h5>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-3 menu">
-                            <div data-url_target="about_us" class="profile-btn menu_button menu-item">
-                                <img alt="" src="../../img/about.jpg">
-                                <div class="mask">
-                                </div>
-                                <div class="heading">
-                                    <i class="ion-location hidden-xs"></i>
-                                    <h2>Mis</h2>
-                                    <h5>direcciones</h5>
-
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-3 menu">
-                            <div data-url_target="about_us" class="profile-btn menu_button menu-item">
-                                <img alt="" src="../../img/about.jpg">
-                                <div class="mask">
-                                </div>
-                                <div class="heading">
-                                    <i class="ion-compose hidden-xs"></i>
-                                    <h2>Agregar</h2>
-                                    <h5>dirección</h5>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-3 menu">
-                            <div data-url_target="about_us" class="profile-btn menu_button menu-item">
-                                <img alt="" src="../../img/about.jpg" style="width: 100%; height: auto;">
-                                <div class="mask">
-                                </div>
-                                <div class="heading">
-                                    <i class="ion-ios-person hidden-xs"></i>
-                                    <h2>Información</h2>
-                                    <h5>personal</h5>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                <div class="col-md-12">
-                    <div class="pull-right">
-                        <a href="/"
-                           class="button_type_4 bg-btn-grey d_inline_middle r_corners tr_all_hover pull-right">
-                            <i class="fa fa-angle-left"></i>
-                            Regresar a inicio
-                        </a>
+                    <div class="heading">
+                        <i class="ion-bag hidden-xs"></i>
+                        <h2>Historial</h2>
+                        <h5>de compras</h5>
                     </div>
                 </div>
-                <br><br>
-                <!--account-->
-            </article>
-        </section>
-    </div>
+            </div>
+            <div class="col-md-3 menu">
+                <div data-url_target="about_us" class="profile-btn menu_button menu-item">
+                    <img alt="" src="../../img/about.jpg">
+                    <div class="mask">
+                    </div>
+                    <div class="heading">
+                        <i class="ion-location hidden-xs"></i>
+                        <h2>Mis</h2>
+                        <h5>direcciones</h5>
+
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3 menu">
+                <div data-url_target="about_us" class="profile-btn menu_button menu-item">
+                    <img alt="" src="../../img/about.jpg">
+                    <div class="mask">
+                    </div>
+                    <div class="heading">
+                        <i class="ion-compose hidden-xs"></i>
+                        <h2>Agregar</h2>
+                        <h5>dirección</h5>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3 menu">
+                <div data-url_target="about_us" class="profile-btn menu_button menu-item">
+                    <img alt="" src="../../img/about.jpg" style="width: 100%; height: auto;">
+                    <div class="mask">
+                    </div>
+                    <div class="heading">
+                        <i class="ion-ios-person hidden-xs"></i>
+                        <h2>Información</h2>
+                        <h5>personal</h5>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!--<div class="col-md-12">
+            <div class="pull-right">
+                <a href="/"
+                   class="button_type_4 bg-btn-grey d_inline_middle r_corners tr_all_hover pull-right">
+                    <i class="fa fa-angle-left"></i>
+                    Regresar a inicio
+                </a>
+            </div>
+        </div>-->
+
+    </section>
 </div>
