--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -40,6 +40,13 @@
 
                     <div class="col-md-offset-2 col-md-10">
                         <form class="padding" name="registerForm" ng-submit="Access.createAccount()" novalidate>
+                            <div class="form-group" ng-class="{ 'has-error': registerForm.businessName.$touched && registerForm.businessName.$invalid }">
+                                <input type="text" ng-model="Access.formData.businessName" class="form-control" id="businessName" name="businessName"
+                                       placeholder="Nombre" required>
+                                <div class="help-block" ng-messages="registerForm.businessName.$error" ng-if="registerForm.businessName.$touched">
+                                    <div ng-message="required">El campo nombre es requerido</div>
+                                </div>
+                            </div>
                             <div class="form-group" ng-class="{ 'has-error': registerForm.username.$touched && registerForm.username.$invalid }">
                                 <input type="text" ng-minlength="8"  ng-model="Access.formData.username" class="form-control" id="username" name="username"
                                        placeholder="Usuario" required>
