--- a/app/templates/shop/payment.html
+++ b/app/templates/shop/payment.html
@@ -10,11 +10,11 @@
                         <div class="col-xs-12"><p>Elige una dirección de envío a domicilio</p></div>
                         <div class="col-xs-12 col-sm-6 col-md-12">
                             <div class="col-md-6">
-                                <div class="form-group" ng-class="{ 'has-error': paymentForm.fullName.$touched && paymentForm.fullName.$invalid }">
-                                    <label for="fullName">Nombre(*)</label>
-                                    <input type="text" ng-model="Payment.formData.fullName" class="form-control" id="fullName" name="fullName" required>
-                                    <div class="help-block" ng-messages="paymentForm.fullName.$error" ng-if="paymentForm.fullName.$touched">
-                                        <div ng-message="required">Ingrese el nombre</div>
+                                <div class="form-group" ng-class="{ 'has-error': paymentForm.firstName.$touched && paymentForm.firstName.$invalid }">
+                                    <label for="firstName">Nombre(*)</label>
+                                    <input type="text" ng-model="Payment.formData.firstName" class="form-control" id="firstName" name="firstName" required>
+                                    <div class="help-block" ng-messages="paymentForm.firstName.$error" ng-if="paymentForm.firstName.$touched">
+                                        <div ng-message="required">El campo nombre es requerido</div>
                                     </div>
                                 </div>
                                 <div class="form-group">
@@ -36,9 +36,12 @@
                                 </div>
                             </div>
                             <div class="col-md-6">
-                                <div class="form-group">
+                                <div class="form-group" ng-class="{ 'has-error': paymentForm.address.$touched && paymentForm.address.$invalid }">
                                     <label for="address">Dirección</label>
-                                    <input type="text" class="form-control" id="address" name="address">
+                                    <input type="text" ng-model="Payment.formData.address" class="form-control" id="address" name="address" required>
+                                    <div class="help-block" ng-messages="paymentForm.address.$error" ng-if="paymentForm.address.$touched">
+                                        <div ng-message="required">El campo dirección es requerido</div>
+                                    </div>
                                 </div>
                             </div>
                             <div class="col-md-3">
