--- a/app/templates/shop/shopcart.html
+++ b/app/templates/shop/shopcart.html
@@ -25,7 +25,7 @@
                 <div class="product-cart col-md-12" ng-repeat="product in ShopCart.items">
                     <div class="col-md-3">
                         <div class="shopcart-img">
-                            <img src="../../img/Servo-Motor.gif" alt="" width="200">
+                            <img src="../../img/servoind.jpg" alt="" width="200">
                         </div>
                     </div>
                     <div class="col-md-4">
