--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -170,7 +170,7 @@ body
   font-size 32px  !important
 ​
 .shopping-cart a 
-  font-size 28px !important  
+  font-size 28px !important
 .qty-cart
   position absolute
   color white
@@ -609,7 +609,7 @@ header
   .prod-detail-descrip
     p
       font-size 18px
-      padding-top 20px
+      padding 25px 20%
       color catext3
 .product-info
   background cagreen
@@ -1192,6 +1192,36 @@ header
   color #f5f5f5
   background-color cagreen
 
+/* Payment method */
+.paymentWrap
+  padding 50px
+  .paymentBtnGroup
+    max-width 800px
+    margin auto
+    .paymentMethod
+      padding 40px
+      box-shadow none
+      position relative
+      .method
+        position absolute
+        right 3px
+        top 3px
+        bottom 3px
+        left 3px
+        background-size contain
+        background-position center
+        background-repeat no-repeat
+        border 2px solid transparent
+        transition all 0.5s
+        &.paypal
+          background-image url("http://www.marc.com.mx/mcweb/wp-content/uploads/2015/12/paypal.png")
+        &.bank-deposit
+          background-image url("https://elsoldemexico.com.mx/wp-content/uploads/2016/03/bancos.jpg")
+        &.credit-card
+          background-image url("http://www.doctoraboitiz.com/joomla30/images/Dr.Aboitiz/bienvenidas-sus-tarjetas-de-credito-y-debito.jpg")
+        &:hover
+          border-color rgba(0,0,0,.4)
+          outline none !important
 /************** footer area css ******************/
 footer
   background-color cablack
