--- a/app/css/main.css
+++ b/app/css/main.css
@@ -706,7 +706,7 @@ header {
 }
 .product-detail .prod-detail-descrip p {
   font-size: 18px;
-  padding-top: 20px;
+  padding: 25px 20%;
   color: #717171;
 }
 .product-info {
@@ -1406,6 +1406,43 @@ color
 .alert-pdanger {
   color: #f5f5f5;
   background-color: #aa261d;
+}
+.paymentWrap {
+  padding: 50px;
+}
+.paymentWrap .paymentBtnGroup {
+  max-width: 800px;
+  margin: auto;
+}
+.paymentWrap .paymentBtnGroup .paymentMethod {
+  padding: 40px;
+  box-shadow: none;
+  position: relative;
+}
+.paymentWrap .paymentBtnGroup .paymentMethod .method {
+  position: absolute;
+  right: 3px;
+  top: 3px;
+  bottom: 3px;
+  left: 3px;
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+  border: 2px solid transparent;
+  transition: all 0.5s;
+}
+.paymentWrap .paymentBtnGroup .paymentMethod .method.paypal {
+  background-image: url("http://www.marc.com.mx/mcweb/wp-content/uploads/2015/12/paypal.png");
+}
+.paymentWrap .paymentBtnGroup .paymentMethod .method.bank-deposit {
+  background-image: url("https://elsoldemexico.com.mx/wp-content/uploads/2016/03/bancos.jpg");
+}
+.paymentWrap .paymentBtnGroup .paymentMethod .method.credit-card {
+  background-image: url("http://www.doctoraboitiz.com/joomla30/images/Dr.Aboitiz/bienvenidas-sus-tarjetas-de-credito-y-debito.jpg");
+}
+.paymentWrap .paymentBtnGroup .paymentMethod .method:hover {
+  border-color: rgba(0,0,0,0.4);
+  outline: none !important;
 }
 footer {
   background-color: #323232;
