--- a/app/templates/auth/dashboard.html
+++ b/app/templates/auth/dashboard.html
@@ -8,7 +8,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-3 menu">
+            <div class="col-md-3 menu" ui-sref="sales">
                 <div data-url_target="about_us" class="profile-btn menu_button menu-item">
                     <img alt="" src="../../img/about.jpg">
                     <div class="mask">
