--- a/app/templates/categories.html
+++ b/app/templates/categories.html
@@ -9,19 +9,13 @@
                     <div class="row text-center">
                         <div class="col-sm-4" ng-repeat="product in Product.list">
                             <div class="box-prod">
-                                <a ui-sref="product-detail({slug:product.slug})" ng-if="!Product.isPost" title="Ver detalles del producto">
-                                    <div class="bg-prod" style="background-image: url('{{product.urlImages.original }}')"></div>
-                                    <h3 class="prod-descrip">{{product.title}}</h3>
+                                <a ui-sref="product-detail({slug:product.slug})">
+                                    <div class="bg-prod" style="background-image: url('{{product.featuredImage.url }}')"></div>
+                                    <h3 class="prod-descrip">{{product.name}}</h3>
 
                                     <h4 class="prod-price" ng-if="!Product.isPost"><strong>{{product.price | currency}}</strong></h4>
                                 </a>
-                                <a ui-sref="post_detail({slug:product.slug})" ng-if="Product.isPost">
-                                    <div class="bg-prod" style="background-image: url('{{product.urlImages.original }}')"></div>
-                                    <h3 class="prod-descrip">{{product.title}}</h3>
-
-                                    <h4 class="prod-price" ng-if="!Product.isPost"><strong>{{product.price | currency}}</strong></h4>
-                                </a>
-                                <a ng-click="Product.setItem({id: product.id, name: product.name, price: product.price, qty: 1}, 1)"
+                                <a ng-click="Product.setItem({id: product.id, image: product.featuredImage.url, name: product.name, price: product.price, qty: 1}, 1)"
                                    ng-disabled="Product.itemInCart(product)"
                                    class="btn btn-success btn-cart">Agregar al Carrito</a>
                                 <!--<a ui-sref="post_detail({slug: product.slug})" class="btn btn-success btn-cart" ng-if="Product.isPost">Ver más</a>-->
