--- a/app/templates/products.html
+++ b/app/templates/products.html
@@ -12,7 +12,7 @@
                             <div class="box-prod">
                                 <a ui-sref="category({slug:entry.slug})">
                                 <div class="bg-prod"
-                                     style="background-image: url('{{entry.urlImages.original }}')"></div>
+                                     style="background-image: url('{{entry.featuredImage.url }}')"></div>
                                 <h3 class="prod-descrip">{{entry.name}}</h3>
 
                                 <h4 class="prod-price"><strong>{{entry.excerpt}}</strong></h4>
