--- a/app/templates/shop/payment.html
+++ b/app/templates/shop/payment.html
@@ -1,5 +1,5 @@
 <div class="header-title">
-    <h2 class="title text-center">Proceso de pago</h2>
+    <h2 class="title text-center">Datos de envío</h2>
 </div>
 <section id="content-area">
     <div class="container">
@@ -10,10 +10,13 @@
                         <div class="col-xs-12"><p>Elige una dirección de envío a domicilio</p></div>
                         <div class="col-xs-12 col-sm-6 col-md-12">
                             <div class="col-md-6">
-                                <div class="form-group" ng-class="{ 'has-error': paymentForm.firstName.$touched && paymentForm.firstName.$invalid }">
+                                <div class="form-group"
+                                     ng-class="{ 'has-error': paymentForm.firstName.$touched && paymentForm.firstName.$invalid }">
                                     <label for="firstName">Nombre(*)</label>
-                                    <input type="text" ng-model="Payment.formData.firstName" class="form-control" id="firstName" name="firstName" required>
-                                    <div class="help-block" ng-messages="paymentForm.firstName.$error" ng-if="paymentForm.firstName.$touched">
+                                    <input type="text" ng-model="Payment.formData.firstName" class="form-control"
+                                           id="firstName" name="firstName" required>
+                                    <div class="help-block" ng-messages="paymentForm.firstName.$error"
+                                         ng-if="paymentForm.firstName.$touched">
                                         <div ng-message="required">El campo nombre es requerido</div>
                                     </div>
                                 </div>
@@ -36,10 +39,13 @@
                                 </div>
                             </div>
                             <div class="col-md-6">
-                                <div class="form-group" ng-class="{ 'has-error': paymentForm.address.$touched && paymentForm.address.$invalid }">
+                                <div class="form-group"
+                                     ng-class="{ 'has-error': paymentForm.address.$touched && paymentForm.address.$invalid }">
                                     <label for="address">Dirección</label>
-                                    <input type="text" ng-model="Payment.formData.address" class="form-control" id="address" name="address" required>
-                                    <div class="help-block" ng-messages="paymentForm.address.$error" ng-if="paymentForm.address.$touched">
+                                    <input type="text" ng-model="Payment.formData.address" class="form-control"
+                                           id="address" name="address" required>
+                                    <div class="help-block" ng-messages="paymentForm.address.$error"
+                                         ng-if="paymentForm.address.$touched">
                                         <div ng-message="required">El campo dirección es requerido</div>
                                     </div>
                                 </div>
@@ -85,82 +91,6 @@
                                     <input type="text" class="form-control" id="neighborhood" name="neighborhood">
 
                                 </div>
-                            </div>
-                        </div>
-                        <div class="col-xs-12"><p>Método de pago</p></div>
-
-                        <div class="col-xs-12 col-sm-6 col-md-12" style="background: #eee;">
-
-                            <div class="col-md-12">
-                                <label class="radio-inline"><input type="radio" name="payment" value="">Depósito
-                                    bancario</label>
-                                <label class="radio-inline"><input type="radio" name="payment" value="">Tarjeta de
-                                    débito /
-                                    crédito</label>
-                            </div>
-
-                            <div class="col-md-6">
-                                <div class="form-group">
-                                    <label for="name">Nombre titular</label>
-                                    <input type="text" class="form-control" id="name">
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="form-group">
-                                    <label for="name">N° de tarjeta</label>
-                                    <input type="text" class="form-control" id="name">
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="form-group">
-                                    <label for="name">Tipo de tarjeta</label>
-                                    <input type="text" class="form-control" id="name">
-                                </div>
-                            </div>
-                            <div class="col-md-3">
-                                <div class="form-group">
-                                    <label for="name">Vencimiento (Mes / Año)</label>
-                                    <input type="text" class="form-control" id="name">
-                                </div>
-                            </div>
-                            <div class="col-md-3">
-                                <div class="form-group" style="padding-top: 5px;">
-                                    <label for=""></label>
-                                    <input type="text" class="form-control" id="name">
-                                </div>
-                            </div>
-                        </div>
-                        <div class="pull-right save-info">
-                            <button type="submit" class="btn btn-cart"
-                                    ng-click="Payment.processPurchase()"
-                                    ng-disabled="paymentForm.$invalid">Guardar información</button>
-                        </div>
-                    </div>
-                    <div class="col-md-3">
-                        <div class="details-prod">
-                            <h4>Resumen de pedido</h4>
-                            <div class="table-responsive">
-                                <table class="table table-striped">
-                                    <tbody>
-                                    <tr>
-                                        <td>Subtotal(1)</td>
-                                        <td>{{ Payment.total | currency }}</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Envío</td>
-                                        <td>{{ 120 | currency}}</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Total</td>
-                                        <td>{{ Payment.total | currency }}</td>
-                                    </tr>
-                                    </tbody>
-                                </table>
-                                <button class="btn btn-cart btn-block">Procesar compra</button>
-                            </div>
-                            <div class="type-payment" style="padding-top: 25px;">
-                                <p>Tipo de pago:</p>
-                                <p>Pago con tarjeta de débito / crédito</p>
                             </div>
                         </div>
                     </div>
