fix image in post and responsive details

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -2386,6 +2386,12 @@ footer .contact-sty .download-app > i:hover {
   }
 }
 @media only screen and (max-width: 767px) {
+  .prod-entry {
+    padding: 15px 6% 10px !important;
+  }
+  .perfil {
+    border-top: 1px solid rgba(0,0,0,0.075);
+  }
   .detail-qty {
     margin-left: 31%;
   }
