--- a/app/css/responsive.styl
+++ b/app/css/responsive.styl
@@ -230,6 +230,10 @@
 /* Mobile Layout: 320px. */
 
 @media only screen and (max-width: 767px)
+  .prod-entry
+    padding 15px 6% 10px !important
+  .perfil
+    border-top 1px solid rgba(0, 0, 0, .075)
   .detail-qty
     margin-left 31%
   .detail-price
