--- a/app/templates/categories.html
+++ b/app/templates/categories.html
@@ -8,17 +8,22 @@
                 <div class="content-pages" infinite-scroll='Product.getMorePosts()' infinite-scroll-disabled='Product.busy || !Product.next || Product.loadPosts'>
                     <div class="row text-center">
                         <div class="col-sm-4" ng-repeat="product in Product.list">
-                            <div class="box-prod">
-                                <a ui-sref="product-detail({slug:product.slug})">
+                            <div class="box-prod" ng-if="!Product.isPost">
+                                <a ui-sref="product-detail({slug:product.slug})" title="Ver detalles del producto">
                                     <div class="bg-prod" style="background-image: url('{{product.featuredImage.url }}')"></div>
                                     <h3 class="prod-descrip">{{product.name}}</h3>
-
-                                    <h4 class="prod-price" ng-if="!Product.isPost"><strong>{{product.price | currency}}</strong></h4>
+                                    <h4 class="prod-price"><strong>{{product.price | currency}}</strong></h4>
                                 </a>
                                 <a ng-click="Product.setItem({id: product.id, image: product.featuredImage.url, name: product.name, price: product.price, qty: 1}, 1)"
                                    ng-disabled="Product.itemInCart(product)"
                                    class="btn btn-success btn-cart">Agregar al Carrito</a>
-                                <!--<a ui-sref="post_detail({slug: product.slug})" class="btn btn-success btn-cart" ng-if="Product.isPost">Ver más</a>-->
+                            </div>
+                            <div class="box-prod" ng-if="Product.isPost">
+                                <a ui-sref="post_detail({slug:product.slug})">
+                                    <div class="bg-prod" style="background-image: url('{{product.featuredImage.url }}')"></div>
+                                    <h3 class="prod-descrip">{{product.title}}</h3>
+                                </a>
+                                <a ui-sref="post_detail({slug: product.slug})" class="btn btn-success btn-cart">Ver más</a>
                             </div>
                         </div>
                         <div class="col-sm-12" ng-show="Product.busy">
@@ -31,9 +36,6 @@
                     <!--post list -->
                 </div>
             </div>
-            <!--<div class="col-md-3 col-sm-3 widgets">
-                <ng-include src="'/templates/partials/sidebar.html'"></ng-include>
-            </div>-->
         </div>
     </div>
 </section>
